--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Comedies'
 - !lcsh 'American drama'
+- GITenberg
 title: 'The Sweet Girl Graduates: A Farce in Three Acts and an Epilogue'
 url: http://www.gutenberg.org/ebooks/31506
